[project]
name = "todo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.3",
    "langchain-core>=1.2.7",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.6",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
]
